# sdf-wot-converter-py

./: .gitignore  LICENSE  README.md  convert_playground.sh  evaluate.sh  pyproject.toml  setup.cfg
.github/workflows/: build_status.yml  convert_sdf_models.yml  evaluate_performance.yml  publish.yml
converter/: __init__.py  __main__.py  sdf_to_wot.py  wot_to_sdf.py
converter/schemas/: sdf_framework_schema.py  sdf_validation_schema.py  td_schema.py  tm_schema.py
examples/: example.py
examples/sdf/: example.sdf-mapping.json  example.sdf.json  sdfobject-level.sdf.json
examples/wot/: example-with-bindings.tm.jsonld  example-with-placeholders.tm.json  example-with-placeholders.tm.jsonld  example-with-tm-extends.tm.json  example-with-tm-extends.tm.jsonld  example-with-tm-ref.tm.json  example-with-tm-ref.tm.jsonld  example.td.jsonld  example.tm.jsonld  minimal-example.tm.jsonld  placeholders.json
sdf_wot_converter/: __init__.py  __main__.py  sdf_to_wot.py  utility.py  wot_to_sdf.py
sdf_wot_converter/cli/: __init__.py
sdf_wot_converter/converters/: __init__.py  jsonschema.py  sdf_to_tm.py  sdf_to_wot.py  td_to_tm.py  tm_to_sdf.py  tm_to_td.py  utility.py  wot_common.py  wot_to_sdf.py
sdf_wot_converter/converters/common/: jsonschema.py
sdf_wot_converter/io/: __init__.py
sdf_wot_converter/schemas/: td_schema.py  tm_schema.py
sdf_wot_converter/validation/: __init__.py  sdf_framework_schema.py  sdf_validation_schema.py  td_schema.py  tm_schema.py
src/converter/: __main__.py
tests/: test_cli.py  test_sdf_to_tm.py  test_td_to_tm.py  test_tm_to_sdf.py  test_tm_to_td.py
tests/converter/: test_cli.py  test_sdf_roundtrips.py  test_sdf_to_tm.py  test_sdf_to_wot.py  test_td_to_sdf.py  test_td_to_tm.py  test_tm_to_sdf.py  test_tm_to_td.py  test_wot_to_sdf.py
