[metadata]
name = sdf-wot-converter
version = 0.8.0
author = Jan Romann
author_email = jan.romann@uni-bremen.de
description = Converter between WoT TD and SDF (including protocol bindings). Work in Progress.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JKRhb/sdf-wot-converter-py
project_urls =
    Bug Tracker = https://github.com/JKRhb/sdf-wot-converter-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    sdf_wot_converter
    sdf_wot_converter.schemas
    sdf_wot_converter.converters
python_requires = >=3.7
install_requires =
    jsonschema
    jsonpointer
    json-merge-patch
    validators

[options.entry_points]
console_scripts =
    sdf-wot-converter = sdf_wot_converter:main
