[metadata]
name = sdf-wot-converter
version = 1.9.1
author = Jan Romann
author_email = jan.romann@uni-bremen.de
description = Converter between WoT TD and SDF (including protocol bindings).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JKRhb/sdf-wot-converter-py
project_urls =
    Bug Tracker = https://github.com/JKRhb/sdf-wot-converter-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    sdf_wot_converter
    sdf_wot_converter.validation
    sdf_wot_converter.converters
    sdf_wot_converter.cli
python_requires = >=3.7
install_requires =
    jsonschema >=4.6.0, <5
    jsonpointer >=2.3, <3
    json-merge-patch >= 0.2.0, <1
    validators >= 0.20.0, <1

[options.entry_points]
console_scripts =
    sdf-wot-converter = sdf_wot_converter:main
